--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,12 @@
     text-align: center;
 }
 
-#policyflow {
+
+#mintpart,
+#policypart,
+#userpart {
     width: 800px;
     margin: 0 auto;
-    text-align: center;
 }
 
 #mint_number {
